--- a/test_sora/test1/templates/test1/index.html
+++ b/test_sora/test1/templates/test1/index.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+<link rel="stylesheet" type="text/css" href="{% static 'test1/style.css' %}">
 {% if latest_question_list %}
     <ul>
     {% for question in latest_question_list %}
@@ -7,3 +10,5 @@
 {% else %}
     <p>No polls are available.</p>
 {% endif %}
+<link rel="stylesheet" type="text/css" href="{% static 'test1/style.css' %}">
+<li>1234567</li>
